<resources>
    <string name="app_name">JudicialCommitteeMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_message">send</string>

    <string name="prompt_username">username</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="btn_login">login</string>
    <string name="error_invalid_username">This username is incorrect</string>
    <string name="meet_list_title">meet list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_demo">Demo</string>

    <string name="title_activity_exp_player">ExpPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="createVoteDialogHint">voteDialogHint</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="title_activity_choose_vote">ChooseVoteActivity</string>
    <string name="loginHint">Login</string>
    <string name="user_info">个人信息</string>
    <string name="change_meet">change meet</string>
    <string name="vote_result">vote result</string>
</resources>
