<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/user_info" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_change_meet"
                android:icon="@drawable/ic_menu_change"
                android:title="@string/change_meet" />

            <item
                android:id="@+id/vote_result"
                android:icon="@drawable/ic_menu_vote_result"
                android:title="@string/vote_result" />
        </menu>
    </item>

</menu>
